<resources>
    <string name="app_name">Recycle Containers Finder</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_activity_maps">Update Map</string>
    <string name="recycle_type">Recycle Type</string>
    <string name="type_general">General</string>
    <string name="type_paper">Paper</string>
    <string name="type_bread">Bread</string>
    <string name="type_cloth">Cloth</string>
    <string name="type_other">Other</string>
    <string name="recycle_status">Recycle Status</string>
    <string name="status_empty">Empty</string>
    <string name="status_normal">Normal</string>
    <string name="status_full">Full</string>
    <string name="button_submit">Submit</string>
    <string name="button_update">Update</string>
    <string-array name="filter_array">
        <item>None</item>
        <item>General</item>
        <item>Paper</item>
        <item>Bread</item>
        <item>Cloth</item>
        <item>Other</item>
    </string-array>
</resources>
