<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PostActivity"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/recycle_type"
        android:textSize="24sp"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/rg_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_type_general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_general"
            />

        <RadioButton
            android:id="@+id/rb_type_paper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_paper"
            />

        <RadioButton
            android:id="@+id/rb_type_bread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_bread"
            />

        <RadioButton
            android:id="@+id/rb_type_cloth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_cloth"
            />

        <RadioButton
            android:id="@+id/rb_type_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_other"
            />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/recycle_status"
        android:textSize="24sp"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/rg_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_status_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_empty"
            />

        <RadioButton
            android:id="@+id/rb_status_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_normal"
            />

        <RadioButton
            android:id="@+id/rb_status_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_full"
            />

    </RadioGroup>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_submit"
            android:layout_gravity="bottom"
            android:id="@+id/btn_submit"/>

    </FrameLayout>

</LinearLayout>